<resources>
    <string name="app_name">Pothole Master</string>
    <string name="google_maps_key">AIzaSyBOetZcAGse6OWgCdgNzbho2knIiCWL44s</string>
    <string name="client_id">148865329906-e0uq4mv2h8gflabngri1ddr1m89id31a.apps.googleusercontent.com</string>
    <string name="retrofit_url">"https://nodejspothole.as.r.appspot.com/"</string>
    <string name="retrofit_url_demo">"http://10.0.2.2:3000/"</string>
    <string name="openstreetmap_url">"https://nominatim.openstreetmap.org/"</string>
    <string name="openrouteservice_url">"https://api.openrouteservice.org/"</string>
    <string name="openrouteservice_key">5b3ce3597851110001cf624891cefefa39a74c41a58e409f95fe4da9/"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="back">Back</string>
    <string name="chi_tiet">Detail</string>
    <string-array name="date_options">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="setting">Setting</string>
    <string name="edit_photo">edit photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //kien
    <string name="hd1">Long tap on the map to mark a location.</string>
    <string name="hd2">Choose function add pothole to add a new pothole on the map.</string>
    <string name="hd3">Fill in all the information of the pothole including Label, Size, Depth, Diameter.</string>
    <string name="hd4">Choose navigation function to get to the location on the map.</string>
    <string name="hd5">If there are potholes along the way, they will appear on the map whether you choose to show potholes or not.</string>
    <string name="hd6">For example.</string>
    <string name="hd7">Cancel navigation button.</string>
    <string name="hd8">Tracking Button. It will always track the user while moving.</string>
    <string name="hd9">Enter pothole diagnosis mode on the journey. It will show a dialog box when there is any pothole.</string>
    //thu
    <string name="orcontinuewith">or continue with</string>
    <string name="enter_pwd">Enter Password\n</string>
    <string name="set_pwd">Set Password</string>
    <string name="pls_set_pwd">Before you can continue, please set a password for your account.</string>
    <string name="add_a_new_pothole">ADD A NEW POTHOLE</string>
    <string name="label">Label</string>
    <string name="big">Big</string>
    <string name="normal">Normal</string>
    <string name="small">Small</string>
    <string name="depth">Depth</string>
    <string name="diameter">Diameter</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="marked_a_location">Marked a location</string>
    <string name="is_this_a_pothole">IS THIS A POTHOLE?</string>
    <string name="app_overview">Potholes Master App Overview.</string>
    <string name="about_app"> Potholes Master is a mobile application designed for Android devices that allows users to manually or automatically detect and mark potholes based on the phone\'s vibration sensor. The app uses the phone\'s accelerometer to detect irregular movements caused by potholes, providing a solution for identifying and reporting road damage in real-time. Users can also manually mark potholes by tapping on the map within the app.
            This application was developed by a team of students from the NT118.P11 Mobile Application Development class, focusing on enhancing road safety and improving the accuracy of road maintenance data collection. With Potholes Master, users can contribute to better infrastructure management by identifying and documenting potholes, helping local authorities prioritize repairs and improve road conditions.</string>
    <string name="potholes">Potholes</string>
    <string name="day">Days</string>
    <string name="pothole_report">Pothole Report</string>
    <string name="language">Languages</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="notification">Notification</string>
    <string name="actionbase_notification">Action-base Notifications</string>
    <string name="mode">Mode</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="vibration">Vibration</string>
    <string name="silent">Silent</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="account_recovery_wizard">ACCOUNT RECOVERY WIZARD</string>
    <string name="enter_your_email_an_opt_will_be_sent_to_your_email_if_it_is_registered">Enter your email. An OTP will be sent to your email if it is registered.</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="skip">Skip</string>
    <string name="profile">Profile</string>
    <string name="question_and_answer">Questions and Answers</string>
    <string name="question1">How does the app detect potholes on the road?</string>
    <string name="answer1">The app uses the smartphone\'s accelerometer sensor to detect unusual movements while the user is driving. When the app detects irregular movements, similar to driving over a pothole, it records the location and notifies the user of the event.</string>
    <string name="question2">In what road conditions can the app detect potholes?</string>
    <string name="answer2">The app can detect potholes on most types of rough roads. However, the accuracy may be affected by factors such as driving speed, the shape of the pothole, and other obstacles on the road.</string>
    <string name="question3">How does the app record the location of the pothole?</string>
    <string name="answer3">" The app uses the phone's GPS to record the exact location of a pothole when it is detected. Every time a pothole is detected, the app automatically saves the coordinates and timestamp so users can review the data on a map."</string>
    <string name="question4">Can I manually report a pothole?</string>
    <string name="answer4">Yes, you can manually report a pothole by tapping on the map to mark its location. This helps the community of users contribute additional data and supports more accurate pothole detection.</string>
    <string name="question5">Does the app store my data?</string>
    <string name="answer5">The app will store data about detected potholes, including their location and time, on your phone. You can view this data anytime in the app’s history section. This data can be used for analysis and helps local authorities improve infrastructure.</string>
    <string name="enter_otp">Enter a 6-digit OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="log_out">Log Out</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pwd">Forgot your Password?</string>
    <string name="login">Login</string>
    <string name="pothole">POTHOLE</string>
    <string name="delete">Delete</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="allday">All Days</string>
    <string name="exit">Exit</string>

</resources>