<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/QaA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/qaatitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_and_answer"
            android:textSize="25dp"
            android:background="@color/purple"
            android:gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/light_purple_blue">
            <TextView
                android:id="@+id/question_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/question1"
                android:textSize="18dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1"
                android:visibility="gone"
                android:paddingTop="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/light_purple_blue">
            <TextView
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/question2"
                android:textSize="18dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/answer_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2"
                android:visibility="gone"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/light_purple_blue">
            <TextView
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/question3"
                android:textSize="18dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/answer_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3"
                android:visibility="gone"
                android:paddingTop="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/light_purple_blue">
            <TextView
                android:id="@+id/question_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/question4"
                android:textSize="18dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer4"
                android:visibility="gone"
                android:paddingTop="8dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/light_purple_blue">
            <TextView
                android:id="@+id/question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/question5"
                android:textSize="18dp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/answer_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer5"
                android:visibility="gone"
                android:paddingTop="8dp" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>