<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/pls_set_pwd"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:autoSizeMaxTextSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/enter_pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:hint="@string/confirm_pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/set_password_button"
        android:layout_gravity="center"
        android:layout_width="284dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_background"
        android:text="@string/set_pwd"
        android:textSize="15sp"
        app:cornerRadius="30dp" />
</LinearLayout>