<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:padding="7dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settingtitle"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/settingtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">
        <FrameLayout
            android:id="@+id/photo_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_person_24"
            android:background="@drawable/vien_avt"
            android:scaleType="centerCrop"
            android:clipToOutline="true" />
            <ImageView
                android:id="@+id/image_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/vien_avt"
                android:contentDescription="Camera button"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/edit"
                android:visibility="gone"/>
        </FrameLayout>

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeStepGranularity="2sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/name" />

            <TextView
                android:id="@+id/nameAPI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:layout_weight="1"
                android:gravity="end" />
            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:background="@null"
                android:gravity="end"
                android:inputType="text"
                android:visibility="gone"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/purple" />
        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Email"/>

            <TextView
                android:id="@+id/emailAPI"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:layout_weight="1"
                android:gravity="end"/>


        </LinearLayout>

        <Button
            android:id="@+id/btEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_background"
            android:text="@string/edit_profile" />
        <Button
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button_background"
            android:text="@string/save"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_button_background"
            android:text="@string/exit"
            android:visibility="gone"/>

    </LinearLayout>



</LinearLayout>
